misc fixing everything pt 2
